refact: adjust params
